manifests/base/routes/argocd_server_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd-server
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    name: argocd-server
    kind: Service
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd-server-metrics
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server-metrics
    app.kubernetes.io/part-of: argocd
spec:
  port:
    targetPort: metrics
  to:
    name: argocd-server-metrics
    kind: Service
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd-metrics
  labels:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/name: argocd-metrics
    app.kubernetes.io/part-of: argocd
spec:
  port:
    targetPort: metrics
  to:
    name: argocd-metrics
    kind: Service
  wildcardPolicy: None
